--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "brandi": "^5.0.0",
         "dotenv": "^16.0.3",
         "telegraf": "^4.12.2",
-        "telegraf-session-local": "^2.1.1"
+        "telegraf-session-local": "^2.1.1",
+        "zod": "^3.21.4"
     }
 }
