--- a/.eslintrc
+++ b/.eslintrc
@@ -19,5 +19,9 @@
                 "extensions": [".ts"]
             }
         }
+    },
+    "rules": {
+        "import/no-unresolved": "off",
+        "@typescript-eslint/ban-ts-comment": "off"
     }
 }
