--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "dependencies": {
         "brandi": "^5.0.0",
         "dotenv": "^16.0.3",
+        "mysql2": "^3.2.0",
         "telegraf": "^4.12.2",
         "telegraf-session-local": "^2.1.1",
         "zod": "^3.21.4"
