--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "devDependencies": {
         "@types/dotenv": "^8.2.0",
         "@types/node": "^18.15.7",
+        "@types/uuid": "^9.0.1",
         "@typescript-eslint/eslint-plugin": "^5.56.0",
         "eslint": "^8.36.0",
         "eslint-config-prettier": "^8.8.0",
@@ -39,9 +40,11 @@
     "dependencies": {
         "brandi": "^5.0.0",
         "dotenv": "^16.0.3",
+        "firebase-admin": "^11.5.0",
         "mysql2": "^3.2.0",
         "telegraf": "^4.12.2",
         "telegraf-session-local": "^2.1.1",
+        "uuid": "^9.0.0",
         "zod": "^3.21.4"
     }
 }
