--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "scripts": {
         "build": "rimraf ./dist && tsc",
         "start": "node dist/index.mjs",
-        "dev": "nodemon --watch './**/*.mts' --exec 'node --experimental-specifier-resolution=node --loader ts-node/esm' src/index.mts",
+        "start:dev": "node --inspect dist/index.mjs",
+        "nodemon": "nodemon --watch './**/*.mts' --exec 'node --experimental-specifier-resolution=node --loader ts-node/esm' src/index.mts",
         "lint": "eslint ./src --ext .mts",
         "format": "eslint ./src --ext .mts --fix"
     },
