--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
         "brandi": "^5.0.0",
         "dotenv": "^16.0.3",
         "firebase-admin": "^11.5.0",
+        "i18next": "^22.4.14",
         "mysql2": "^3.2.0",
         "telegraf": "^4.12.2",
         "telegraf-session-local": "^2.1.1",
