--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "type": "module",
     "scripts": {
         "build": "rimraf ./dist && tsc",
-        "start": "node dist/index.mjs",
-        "start:dev": "node --inspect dist/index.mjs",
-        "nodemon": "nodemon --watch './**/*.mts' --exec 'node --experimental-specifier-resolution=node --loader ts-node/esm' src/index.mts",
+        "start": "cross-env NODE_ENV=production node dist/index.mjs",
+        "start:dev": "cross-env NODE_ENV=development node --inspect dist/index.mjs",
+        "nodemon": "cross-env NODE_ENV=development nodemon --watch './**/*.mts' --exec 'node --experimental-specifier-resolution=node --loader ts-node/esm' src/index.mts",
         "lint": "eslint ./src --ext .mts",
         "format": "eslint ./src --ext .mts --fix",
         "build:ts": "tsc --noEmit"
@@ -24,7 +24,7 @@
     },
     "homepage": "https://github.com/dkhovrich/telegram-coffee-bot#readme",
     "devDependencies": {
-        "@types/dotenv": "^8.2.0",
+        "@types/config": "^3.3.0",
         "@types/node": "^18.15.7",
         "@types/uuid": "^9.0.1",
         "@typescript-eslint/eslint-plugin": "^5.56.0",
@@ -41,7 +41,8 @@
     },
     "dependencies": {
         "brandi": "^5.0.0",
-        "dotenv": "^16.0.3",
+        "config": "^3.3.9",
+        "cross-env": "^7.0.3",
         "firebase-admin": "^11.5.0",
         "i18next": "^22.4.14",
         "mysql2": "^3.2.0",
