--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "scripts": {
         "build": "rimraf ./dist && tsc",
         "start": "cross-env NODE_ENV=production node dist/index.mjs",
-        "start:dev": "cross-env NODE_ENV=development node --inspect dist/index.mjs",
+        "start:dev": "cross-env NODE_ENV=development BOT_MODE=server node --inspect dist/index.mjs",
         "start:gcloud": "cross-env NODE_ENV=development functions-framework --target=bot --source=dist/index.mjs",
         "prettier:check": "prettier . --check",
         "prettier:write": "prettier . --write",
