chore: prepare scripts and docker file for gcloud

--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
     "name": "telegram-coffee-bot",
-    "version": "1.0.8",
+    "version": "1.1.0",
     "description": "Telegram bot for coffee capsules calculation",
     "main": "index.mjs",
     "type": "module",
     "scripts": {
         "build": "rimraf ./dist && tsc",
-        "start": "cross-env NODE_ENV=production node dist/index.mjs",
+        "start": "cross-env NODE_ENV=production BOT_MODE=server node dist/index.mjs",
         "start:dev": "cross-env NODE_ENV=development BOT_MODE=server node --inspect dist/index.mjs",
-        "start:gcloud": "cross-env NODE_ENV=development functions-framework --target=bot --source=dist/index.mjs",
+        "start:gcloud": "functions-framework --target=bot --source=dist/index.mjs",
+        "start:gcloud:dev": "cross-env NODE_ENV=development npm run start:gcloud",
+        "start:gcloud:prod": "cross-env NODE_ENV=production npm run start:gcloud",
         "prettier:check": "prettier . --check",
         "prettier:write": "prettier . --write",
         "lint:check": "eslint ./src --ext .mts",
