--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -17,5 +17,5 @@ jobs:
               with:
                   node-version: "18.x"
             - run: npm ci
-            - run: npm run lint
+            - run: npm run lint:check
             - run: npm run build:ts
