--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "prettier:write": "prettier . --write",
         "lint:check": "eslint ./src --ext .mts",
         "lint:format": "eslint ./src --ext .mts --fix",
-        "build:ts": "tsc --noEmit"
+        "build:noEmit": "tsc --noEmit"
     },
     "repository": {
         "type": "git",
